# awesome-claude-code-status-line

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  configure.py  install.py  install.sh  pyproject.toml  rustfmt.toml  status_line.py  uninstall.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
benches/: parsing.rs  status_line.rs
config/: limits.json
scripts/: build-release.sh  create-universal.sh  install.sh
specs/001-rust-rewrite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-rewrite/checklists/: requirements.md
specs/001-rust-rewrite/contracts/: anthropic-usage-api.json  keychain-credentials.json  status-line-output.md  stdin-input.json
specs/002-security-cli-keychain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-security-cli-keychain/checklists/: requirements.md
specs/003-uninstall-script/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-uninstall-script/checklists/: requirements.md
specs/004-prebuilt-release-installer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-prebuilt-release-installer/checklists/: requirements.md
src/: __init__.py  __main__.py  config.py  error.rs  git_info.py  lib.rs  main.rs  status_line.py  tracker.py
src/api/: client.rs  keychain.rs  mod.rs
src/config/: mod.rs
src/display/: colors.rs  mod.rs  status_line.rs
src/domain/: context.rs  git.rs  input.rs  mod.rs  session.rs  usage.rs
src/git/: mod.rs  status.rs
tests/: cli_contract.rs  error_cases.rs  git_status.rs  happy_path.rs  session_size.rs
